--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	width: 320px;
-	height: 480px;
+	width: 640px;
+	height: 960px;
 	overflow: hidden;
 }
 .player .main {
@@ -23,7 +23,7 @@ body {
 	transition:all 500ms ease-in-out;
 }
 .player .main .thumbnail img {
-	width: 100%;
+	width: 100%; height: 50%;
 }
 .player .main .seekbar {
 	margin-top: -15px;
